--- a/index.html
+++ b/index.html
@@ -43,24 +43,24 @@
         <div></div>
         <div></div>
         <div></div>
-        <div class="log-left"></div>
-        <div class="log-left"></div>
-        <div class="log-left"></div>
-        <div class="log-left"></div>
-        <div class="log-left"></div>
-        <div class="log-left"></div>
-        <div class="log-left"></div>
-        <div class="log-left"></div>
-        <div class="log-left"></div>
-        <div class="log-right"></div>
-        <div class="log-right"></div>
-        <div class="log-right"></div>
-        <div class="log-right"></div>
-        <div class="log-right"></div>
-        <div class="log-right"></div>
-        <div class="log-right"></div>
-        <div class="log-right"></div>
-        <div class="log-right"></div>
+        <div class="log-left l1"></div>
+        <div class="log-left l2"></div>
+        <div class="log-left l3"></div>
+        <div class="log-left l4"></div>
+        <div class="log-left l5"></div>
+        <div class="log-left l1"></div>
+        <div class="log-left l2"></div>
+        <div class="log-left l3"></div>
+        <div class="log-left l4"></div>
+        <div class="log-right l5"></div>
+        <div class="log-right l1"></div>
+        <div class="log-right l2"></div>
+        <div class="log-right l3"></div>
+        <div class="log-right l4"></div>
+        <div class="log-right l5"></div>
+        <div class="log-right l1"></div>
+        <div class="log-right l2"></div>
+        <div class="log-right l3"></div>
         <div></div>
         <div></div>
         <div></div>
@@ -70,7 +70,7 @@
         <div></div>
         <div></div>
         <div></div>
-        <div class="car-left"></div>
+        <div class="car-left "></div>
         <div class="car-left"></div>
         <div class="car-left"></div>
         <div class="car-left"></div>
@@ -101,8 +101,7 @@
         <div></div>
         <div></div>
         <div></div>
-        <div></div>
-        <div class="starting-block"></div>
+        <div class="starting-block frog"></div>
         <div></div>
         <div></div>
         <div></div>
